<resources>
    /****** ENTRY ******/
    // Strings
    <string name="app_name" translatable="false">Midpoint</string>
    <string name="default_notification_channel_id">1001</string>
    // Entry
    <string name="entry_log_in">Log In</string>
    <string name="entry_sign_up">Sign Up</string>

    // Hints
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>



    // Bottom navigation bar
    <string name="nav_home">Home</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meet_a_friend">Requests</string>
    <string name="new_request">New Request</string>

    <!-- Titles for meeting request recycler view -->
    <string name="meeting_active">Active meeting with %s</string>
    <string name="meeting_incoming">%s wants to meet</string>
    <string name="meeting_outgoing">Requested meeting with %s</string>
    <string name="meeting_rejected">%s rejected meeting</string>
    <string name="meeting_heading">%s</string>
    <string name="show_route">Show route</string>
    <string name="send_request">Send request</string>
    <string name="log_out">Sign out</string>
    <string name="avatar_content_description">avatar</string>
    <string name="status_icon_desc">status_icon</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="retract">Retract</string>
    <string name="outgoing">SENT</string>
    <string name="incoming">RECEIVED</string>
    <string name="error_server_connection">Failed to connect</string>
    <string name="send_meeting_request">Send</string>
    <string name="meeting_no_friend">Please add a friend to send a meeting request</string>
    <string name="cafe_switch">Meet at a cafe?</string>
    <string name="filter_friends">Filter friends</string>
    <string name="meeting_request">Meeting Request</string>
    <string name="new_title">New</string>

    // Friends
    <string name="deny">Deny</string>
    <string name="friend_req_sent">You sent a friend request</string>
    <string name="friend_create">Create a Friend Request</string>

    <!-- QR -->
    <string name="qr_scan">Scan QR code</string>
    <string name="qr_code_imgview">Your QR code</string>
    <string name="qr_go_back">Go Back</string>
    <string name="qr_continue">Continue</string>
    <string name="qr_friends_with">You are now friends with</string>
    <string name="qr_valid">This QR code is valid for adding one friend</string>

    <!--Content descriptions -->
    <string name="more_actions_description">more actions</string>
    <string name="add_new_friend">add new friend</string>
    <string name="create_a_friend_request">Create a Friend Request</string>
    <string name="show_qr_code">show qr code</string>
    <string name="back">back</string>
    <string name="send_friend_request">send friend request</string>
    <string name="friend_request_status">friend request status</string>
    <string name="search">search</string>
    <string name="execute_search">execute search</string>
    <string name="open_maps">open maps</string>


    <!-- ACCESSIBILITY -->
    <string name="access_logo">Logo</string>

    <!-- Entry -->
    <string name="desc_show_login">Show log in form</string>
    <string name="desc_show_sign_up">Show sign up form</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="arrival_hint">Arrival radius in meters</string>
    <string name="places_hint">Places search radius</string>

    <!-- Login -->


</resources>
