<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QRActivity">

    <com.google.android.material.button.MaterialButton
        style="@style/RoundImageButton"
        android:id="@+id/qr_btn_close_activity"
        app:icon="@drawable/ic_arrow_left"
        app:iconGravity="textStart"
        app:iconTint="@color/color_primary"
        app:iconPadding="0dp"
        app:cornerRadius="40dp"
        app:rippleColor="@color/color_primary_dark"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qr_code_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:textColor="@color/color_white"
        android:text="@string/qr_valid" />

    <FrameLayout
        android:id="@+id/qr_code_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/qr_image_view_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/qr_code_imgview" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/qr_button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/color_white"
        android:layout_below="@id/qr_code_container"
        android:layout_centerHorizontal="true"
        android:backgroundTint="?attr/buttonColor"
        android:text="@string/qr_scan"
        />
</RelativeLayout>