<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/button_sign_up"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_layout_email"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:hint="@string/hint_email"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_input_email"
                style="@style/InputEditText"
                android:text="a@a.com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_layout_username"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="36dp"
            android:hint="@string/hint_username"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_input_username"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_layout_password"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_input_password"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_layout_confirm_password"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_input_confirm_password"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        style="@style/ButtonSquareIcon"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_arrow"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/barely_white"
        app:srcCompat="@drawable/ic_arrow" />

</RelativeLayout>