<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/friends_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nopoint.midpoint.fragments.FriendsFragment">

    <com.google.android.material.circularreveal.CircularRevealFrameLayout
        android:id="@+id/friends_add_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white_accent"
        android:layout_gravity="bottom|end"
        android:visibility="invisible"
        android:elevation="1dp"
        app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/friends_add_sheet_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/orange"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/friends_add_return"
                        style="@style/ButtonImage"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/trans"
                        android:contentDescription="@string/back"
                        android:src="@drawable/ic_arrow_left" />

                    <ImageButton
                        android:id="@+id/friends_open_qr"
                        style="@style/ButtonImage"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/trans"
                        android:contentDescription="@string/show_qr_code"
                        android:src="@drawable/ic_qr"
                        android:tint="@color/color_white" />
                </RelativeLayout>


                <TextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/create_a_friend_request"
                    android:textColor="@color/color_white"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <com.nopoint.midpoint.views.SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friends_search_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/friends_add_sheet_header"
                android:contentDescription="@string/add_new_friend" />

        </RelativeLayout>
    </com.google.android.material.circularreveal.CircularRevealFrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friends_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideOverlay"
            android:layoutAnimation="@anim/layout_animation"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/friends_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_new_friend"
        app:backgroundTint="@color/orange"
        app:maxImageSize="16dp"
        app:srcCompat="@drawable/ic_plus"
        app:tint="@color/color_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
